--- a/ci-operator/config/openshift/tektoncd-pipeline/openshift-tektoncd-pipeline-release-v0.9.0.yaml
+++ b/ci-operator/config/openshift/tektoncd-pipeline/openshift-tektoncd-pipeline-release-v0.9.0.yaml
@@ -23,6 +23,9 @@ images:
       - destination_dir: .
         source_path: /go/bin/.
   to: tektoncd-pipeline-controller
+- dockerfile_path: openshift/ci-operator/knative-images/nop/Dockerfile
+  from: base
+  to: tektoncd-pipeline-nop
 - dockerfile_path: openshift/ci-operator/knative-images/creds-init/Dockerfile
   from: base
   inputs:
