--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -180,6 +180,8 @@ branch-protection:
               protect: false
             release-next-ci:
               protect: false
+            release-v0.9.0:
+              protect: false
         tektoncd-pipeline-operator:
           branches:
             release-next:
