SDCICD-56. Remove dependency management from openshift/release.
The openshift/release project will no longer perform the glide
dependency installation manually. This will allow the osde2e repo to
control how it handles dependencies. This is preliminary to switching
from glide to godeps, with the eventual hope that we'll use the
Dockerfile in the osde2e repo to run jobs.

--- a/ci-operator/config/openshift/osde2e/openshift-osde2e-master.yaml
+++ b/ci-operator/config/openshift/osde2e/openshift-osde2e-master.yaml
@@ -4,9 +4,6 @@ build_root:
     name: release
     namespace: openshift
     tag: golang-1.11
-binary_build_commands: |
-  go get -u github.com/Masterminds/glide && glide install --strip-vendor
-  mkdir -p /tmp/artifacts
 resources:
   '*':
     limits:
@@ -28,7 +25,7 @@ tests:
 
     ci/prow_pr_check.sh
   container:
-    from: bin
+    from: src
 
 # Tests
 # --- Integration
@@ -39,7 +36,7 @@ tests:
     name: osde2e-secrets
     mount_path: /usr/local/osde2e-secrets
   container:
-    from: bin
+    from: src
   commands: |
     set -o pipefail
 
@@ -60,7 +57,7 @@ tests:
     name: osde2e-secrets
     mount_path: /usr/local/osde2e-secrets
   container:
-    from: bin
+    from: src
   commands: |
     set -o pipefail
 
@@ -83,7 +80,7 @@ tests:
     name: osde2e-secrets
     mount_path: /usr/local/osde2e-secrets
   container:
-    from: bin
+    from: src
   commands: |
     set -o pipefail
 
@@ -106,7 +103,7 @@ tests:
     name: osde2e-secrets
     mount_path: /usr/local/osde2e-secrets
   container:
-    from: bin
+    from: src
   commands: |
     set -o pipefail
 
@@ -130,7 +127,7 @@ tests:
     name: osde2e-secrets
     mount_path: /usr/local/osde2e-secrets
   container:
-    from: bin
+    from: src
   commands: |
     set -o pipefail
 
@@ -152,7 +149,7 @@ tests:
     name: osde2e-secrets
     mount_path: /usr/local/osde2e-secrets
   container:
-    from: bin
+    from: src
   commands: |
     set -o pipefail
 
@@ -174,7 +171,7 @@ tests:
     name: osde2e-secrets
     mount_path: /usr/local/osde2e-secrets
   container:
-    from: bin
+    from: src
   commands: |
     set -o pipefail
 
@@ -198,7 +195,7 @@ tests:
     name: osde2e-secrets
     mount_path: /usr/local/osde2e-secrets
   container:
-    from: bin
+    from: src
   commands: |
     set -o pipefail
 
@@ -222,7 +219,7 @@ tests:
     name: osde2e-secrets
     mount_path: /usr/local/osde2e-secrets
   container:
-    from: bin
+    from: src
   commands: |
     set -o pipefail
 
@@ -246,7 +243,7 @@ tests:
     name: osde2e-secrets
     mount_path: /usr/local/osde2e-secrets
   container:
-    from: bin
+    from: src
   commands: |
     set -o pipefail
 
@@ -267,7 +264,7 @@ tests:
     name: osde2e-secrets
     mount_path: /usr/local/osde2e-secrets
   container:
-    from: bin
+    from: src
   commands: |
     set -o pipefail
 
@@ -288,7 +285,7 @@ tests:
     name: osde2e-secrets
     mount_path: /usr/local/osde2e-secrets
   container:
-    from: bin
+    from: src
   commands: |
     set -o pipefail
 
