--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-e2e.yaml
@@ -259,8 +259,7 @@ objects:
           mkdir -p ~/.ssh
           cp /tmp/cluster/ssh-privatekey ~/.ssh/kube_aws_rsa || true
           export PROVIDER_ARGS="-provider=aws -gce-zone=us-east-1"
-          # TODO: make openshift-tests auto-discover this from cluster config
-          REGION="$(oc get -o jsonpath='{.status.platformStatus.aws.region}' infrastructure cluster)"
+          REGION="$(cat /tmp/artifacts/aws-region)"
           ZONE="$(oc get -o jsonpath='{.items[0].metadata.labels.failure-domain\.beta\.kubernetes\.io/zone}' nodes)"
           export TEST_PROVIDER="{\"type\":\"aws\",\"region\":\"${REGION}\",\"zone\":\"${ZONE}\",\"multizone\":true,\"multimaster\":true}"
           export KUBE_SSH_USER=core
@@ -440,6 +439,7 @@ objects:
               esac
               echo "Subnets : ${subnets}"
             fi
+            echo "${AWS_REGION}" > /tmp/artifacts/aws-region
             cat > /tmp/artifacts/installer/install-config.yaml << EOF
         apiVersion: v1
         baseDomain: ${BASE_DOMAIN:-origin-ci-int-aws.dev.rhcloud.com}
@@ -830,7 +830,7 @@ objects:
             export PATH="${HOME}/.local/bin:${PATH}"
             easy_install --user pip  # our Python 2.7.5 is even too old for ensurepip
             pip install --user awscli
-            export AWS_DEFAULT_REGION="$(python -c 'import json; data = json.load(open("/tmp/artifacts/installer/metadata.json")); print(data["aws"]["region"])')"
+            export AWS_DEFAULT_REGION="$(cat /tmp/artifacts/aws-region)"
             echo "gathering node console output from ${AWS_DEFAULT_REGION}"
           fi
 
