--- a/ci-operator/jobs/openshift/release/openshift-release-release-4.5-periodics.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-release-4.5-periodics.yaml
@@ -3333,6 +3333,8 @@ periodics:
         value: e2e-aws-console
       - name: TEST_COMMAND
         value: ./test-prow-e2e.sh release
+      - name: TEST_IMAGESTREAM_TAG
+        value: stable:console-tests
       image: ci-operator:latest
       imagePullPolicy: Always
       name: ""
