--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-src.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-src.yaml
@@ -728,6 +728,10 @@ objects:
           for INDEX in 0 1 2
           do
             SUBNET="PRIVATE_SUBNET_${INDEX}"
+            case "${BRANCH}" in
+            4.1) SUBNET_KEY=WorkerSubnet;;
+            *) SUBNET_KEY=Subnet;;
+            esac
             aws cloudformation create-stack \
               --stack-name "${CLUSTER_NAME}-compute-${INDEX}" \
               --template-body "$(cat "/var/lib/openshift-install/upi/${CLUSTER_TYPE}/cloudformation/06_cluster_worker_node.yaml")" \
@@ -735,7 +739,7 @@ objects:
               --parameters \
                 ParameterKey=InfrastructureName,ParameterValue="${INFRA_ID}" \
                 ParameterKey=RhcosAmi,ParameterValue="${RHCOS_AMI}" \
-                ParameterKey=Subnet,ParameterValue="${!SUBNET}" \
+                ParameterKey="${SUBNET_KEY},ParameterValue=${!SUBNET}" \
                 ParameterKey=WorkerSecurityGroupId,ParameterValue="${WORKER_SECURITY_GROUP}" \
                 ParameterKey=IgnitionLocation,ParameterValue="https://api-int.${CLUSTER_NAME}.${base_domain}:22623/config/worker" \
                 ParameterKey=CertificateAuthorities,ParameterValue="${IGNITION_CA}" \
