a/ci-operator/templates/openshift/installer/cluster-launch-installer-e2e: Set AWS_DEFAULT_REGION
The command prefers that form [1], and doesn't work with AWS_REGION
[2].

[1]: https://docs.aws.amazon.com/cli/latest/userguide/cli-configure-envvars.html
[2]: https://github.com/openshift/release/pull/6189#issuecomment-561761954

--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-e2e.yaml
@@ -828,7 +828,8 @@ objects:
             export PATH="${HOME}/.local/bin:${PATH}"
             easy_install --user pip  # our Python 2.7.5 is even too old for ensurepip
             pip install --user awscli
-            export AWS_REGION="$(python -c 'import json; data = json.load(open("/tmp/artifacts/installer/metadata.json")); print(data["aws"]["region"])')"
+            export AWS_DEFAULT_REGION="$(python -c 'import json; data = json.load(open("/tmp/artifacts/installer/metadata.json")); print(data["aws"]["region"])')"
+            echo "gathering node console output from ${AWS_DEFAULT_REGION}"
           fi
 
           while IFS= read -r i; do
