--- a/ci-operator/config/openshift/ocs-operator/openshift-ocs-operator-master.yaml
+++ b/ci-operator/config/openshift/ocs-operator/openshift-ocs-operator-master.yaml
@@ -88,6 +88,7 @@ tests:
 - as: ocs-operator-e2e-aws
   commands: |
     make functest
+    make shellcheck-test
   openshift_installer_src:
     cluster_profile: aws
 - as: red-hat-storage-ocs-ci-e2e-aws
