--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-custom-test-image.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-custom-test-image.yaml
@@ -29,6 +29,7 @@ parameters:
 - name: CLUSTER_VARIANT
 - name: BUILD_ID
   required: false
+- name: USE_LEASE_CLIENT
 
 objects:
 
@@ -98,7 +99,7 @@ objects:
       # we want to gather the teardown logs no matter what
       ci-operator.openshift.io/wait-for-container-artifacts: teardown
       ci-operator.openshift.io/save-container-logs: "true"
-      ci-operator.openshift.io/container-sub-tests: "lease,setup,test,teardown"
+      ci-operator.openshift.io/container-sub-tests: "setup,test,teardown"
   spec:
     restartPolicy: Never
     activeDeadlineSeconds: 18000
@@ -123,67 +124,6 @@ objects:
       - /tmp/shared/oc
 
     containers:
-
-    - name: lease
-      image: registry.svc.ci.openshift.org/ci/boskoscli:latest
-      terminationMessagePolicy: FallbackToLogsOnError
-      resources:
-        requests:
-          cpu: 10m
-          memory: 10Mi
-        limits:
-          memory: 200Mi
-      volumeMounts:
-      - name: shared-tmp
-        mountPath: /tmp/shared
-      - name: cluster-profile
-        mountPath: /tmp/cluster
-      - name: artifacts
-        mountPath: /tmp/artifacts
-      env:
-      - name: CLUSTER_TYPE
-        value: ${CLUSTER_TYPE}
-      - name: CLUSTER_NAME
-        value: ${NAMESPACE}-${JOB_NAME_HASH}
-      command:
-      - /bin/bash
-      - -c
-      - |
-        #!/bin/bash
-        set -euo pipefail
-
-        trap 'rc=$?; CHILDREN=$(jobs -p); if test -n "${CHILDREN}"; then kill ${CHILDREN} && wait; fi; if test "${rc}" -ne 0; then touch /tmp/shared/exit; fi; exit "${rc}"' EXIT
-
-        # hack for bazel
-        function boskosctl() {
-          /app/boskos/cmd/cli/app.binary "${@}"
-        }
-
-        echo "[INFO] Acquiring a lease ..."
-        resource="$( boskosctl --server-url http://boskos.ci --owner-name "${CLUSTER_NAME}" acquire --type "${CLUSTER_TYPE}-quota-slice" --state free --target-state leased --timeout 150m )"
-        touch /tmp/shared/leased
-        echo "[INFO] Lease acquired!"
-        echo "[INFO] Leased resource: ${resource}"
-
-        function release() {
-            local resource_name; resource_name="$( jq .name --raw-output <<<"${resource}" )"
-            echo "[INFO] Releasing the lease on resouce ${resource_name}..."
-            boskosctl --server-url http://boskos.ci --owner-name "${CLUSTER_NAME}" release --name "${resource_name}" --target-state free
-        }
-        trap release EXIT
-
-        echo "[INFO] Sending heartbeats to retain the lease..."
-        boskosctl --server-url http://boskos.ci --owner-name "${CLUSTER_NAME}" heartbeat --resource "${resource}" &
-
-        while true; do
-          if [[ -f /tmp/shared/exit ]]; then
-            echo "Another process exited" 2>&1
-            exit 0
-          fi
-
-          sleep 15 & wait $!
-        done
-
     # Once the cluster is up, executes shared tests
     - name: test
       image: registry.svc.ci.openshift.org/${NAMESPACE}/${TEST_IMAGESTREAM_TAG}
