--- a/cluster/ci/monitoring/mixins/prometheus_out/prometheus_rule_prow.yaml
+++ b/cluster/ci/monitoring/mixins/prometheus_out/prometheus_rule_prow.yaml
@@ -325,8 +325,8 @@ spec:
     rules:
     - alert: endurance-cluster-maintenance-aws-4.3-failures
       annotations:
-        message: Prow job endurance-cluster-maintenance-aws-4.3 has failures. Check
-          on <https://prow.svc.ci.openshift.org/?type=periodic&job=endurance-cluster-maintenance-aws-4.3|deck>
+        message: '@bparees Prow job endurance-cluster-maintenance-aws-4.3 has failures.
+          Check on <https://prow.svc.ci.openshift.org/?type=periodic&job=endurance-cluster-maintenance-aws-4.3|deck>'
       expr: |
         rate(prowjob_state_transitions{job_name="endurance-cluster-maintenance-aws-4.3",state="failure"}[5m]) > 0
       for: 1m
@@ -335,8 +335,8 @@ spec:
         team: build-cop
     - alert: periodic-openshift-library-import-failures
       annotations:
-        message: Prow job periodic-openshift-library-import has failures. Check on
-          <https://prow.svc.ci.openshift.org/?type=periodic&job=periodic-openshift-library-import|deck>
+        message: '@devex Prow job periodic-openshift-library-import has failures.
+          Check on <https://prow.svc.ci.openshift.org/?type=periodic&job=periodic-openshift-library-import|deck>'
       expr: |
         rate(prowjob_state_transitions{job_name="periodic-openshift-library-import",state="failure"}[5m]) > 0
       for: 1m
