--- a/core-services/release-controller/rpms-ocp-4.3.yaml
+++ b/core-services/release-controller/rpms-ocp-4.3.yaml
@@ -71,7 +71,7 @@ items:
           - --timeout=30m
           - /tmp/repos
 
-# OpenStack repos
+# OpenStack 16 repos
 - apiVersion: v1
   kind: Service
   metadata:
@@ -139,6 +139,75 @@ items:
               - --max-size=5g
               - --timeout=30m
               - /tmp/repos
+
+# OpenStack 15 repos
+- apiVersion: v1
+  kind: Service
+  metadata:
+    name: base-openstack-15-4-3
+    namespace: ocp
+  spec:
+    selector:
+      app: base-openstack-15-4-3
+    ports:
+    - port: 80
+      targetPort: 8080
+    type: ClusterIP
+- apiVersion: apps/v1
+  kind: Deployment
+  metadata:
+    name: base-openstack-15-4-3
+    namespace: ocp
+    labels:
+      app: base-openstack-15-4-3
+    annotations:
+      image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"content-mirror:latest","namespace":"ci"},"fieldPath":"spec.template.spec.containers[?(@.name==\"mirror\")].image"}]'
+  spec:
+    replicas: 2
+    selector:
+      matchLabels:
+        app: base-openstack-15-4-3
+    template:
+      metadata:
+        labels:
+          app: base-openstack-15-4-3
+      spec:
+        volumes:
+        - name: repos
+          configMap:
+            name: base-repos
+            items:
+            - key: ocp-4.3-openstack-15.repo
+              path: ocp-4.3-openstack-15.repo
+        - name: key
+          secret:
+            secretName: mirror.openshift.com
+        - name: cache
+          emptyDir: {}
+        - name: run
+          emptyDir: {}
+        containers:
+        - name: mirror
+          ports:
+          - name: http
+            containerPort: 8080
+          volumeMounts:
+          - name: repos
+            mountPath: /tmp/repos
+            readOnly: true
+          - name: key
+            mountPath: /tmp/key
+            readOnly: true
+          - name: cache
+            mountPath: /tmp/cache
+          image: " "
+          workingDir: /tmp/repos
+          command:
+          - content-mirror
+          - --path=/tmp/config
+          - --max-size=5g
+          - --timeout=30m
+          - /tmp/repos
 
 - apiVersion: v1
   kind: Service
