--- a/ci-operator/config/openshift/kubernetes-autoscaler/openshift-kubernetes-autoscaler-release-4.1.yaml
+++ b/ci-operator/config/openshift/kubernetes-autoscaler/openshift-kubernetes-autoscaler-release-4.1.yaml
@@ -58,12 +58,6 @@ tests:
   commands: ARTIFACT_DIR=/tmp/artifacts JUNIT_REPORT=1 hack/test-go.sh
   container:
     from: src
-- as: e2e-aws-operator
-  commands: |
-    cd test/openshift
-    make test-e2e
-  openshift_installer_src:
-    cluster_profile: aws
 - as: git-history
   commands: ./hack/verify_history.sh
   container:
@@ -80,3 +74,8 @@ tests:
   commands: IS_CONTAINER=TRUE make lint
   container:
     from: src
+- as: e2e-aws-operator
+  commands: make test-e2e
+  openshift_installer_custom_test_image:
+    cluster_profile: aws
+    from: stable:cluster-api-actuator-pkg
