--- a/ci-operator/config/openshift/kubernetes-autoscaler/openshift-kubernetes-autoscaler-release-4.3.yaml
+++ b/ci-operator/config/openshift/kubernetes-autoscaler/openshift-kubernetes-autoscaler-release-4.3.yaml
@@ -62,12 +62,6 @@ tests:
   commands: ARTIFACT_DIR=/tmp/artifacts JUNIT_REPORT=1 hack/test-go.sh
   container:
     from: src
-- as: e2e-aws-operator
-  commands: |
-    cd test/openshift
-    make test-e2e
-  openshift_installer_src:
-    cluster_profile: aws
 - as: git-history
   commands: ./hack/verify_history.sh
   container:
@@ -84,15 +78,18 @@ tests:
   commands: IS_CONTAINER=TRUE make lint
   container:
     from: src
+- as: e2e-aws-operator
+  commands: make test-e2e
+  openshift_installer_custom_test_image:
+    cluster_profile: aws
+    from: stable:cluster-api-actuator-pkg
 - as: e2e-azure-operator
-  commands: |
-    cd test/openshift
-    make test-e2e
-  openshift_installer_src:
+  commands: make test-e2e
+  openshift_installer_custom_test_image:
     cluster_profile: azure4
+    from: stable:cluster-api-actuator-pkg
 - as: e2e-gcp-operator
-  commands: |
-    cd test/openshift
-    make test-e2e
-  openshift_installer_src:
+  commands: make test-e2e
+  openshift_installer_custom_test_image:
     cluster_profile: gcp
+    from: stable:cluster-api-actuator-pkg
