--- a/ci-operator/jobs/openshift/kubernetes-autoscaler/openshift-kubernetes-autoscaler-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/kubernetes-autoscaler/openshift-kubernetes-autoscaler-master-presubmits.yaml
@@ -41,9 +41,9 @@ presubmits:
         - name: JOB_NAME_SAFE
           value: e2e-aws-operator
         - name: TEST_COMMAND
-          value: |
-            cd test/openshift
-            make test-e2e
+          value: make test-e2e
+        - name: TEST_IMAGESTREAM_TAG
+          value: stable:cluster-api-actuator-pkg
         image: ci-operator:latest
         imagePullPolicy: Always
         name: ""
@@ -55,7 +55,7 @@ presubmits:
           name: cluster-profile
         - mountPath: /usr/local/e2e-aws-operator
           name: job-definition
-          subPath: cluster-launch-installer-src.yaml
+          subPath: cluster-launch-installer-custom-test-image.yaml
         - mountPath: /etc/sentry-dsn
           name: sentry-dsn
           readOnly: true
@@ -67,7 +67,7 @@ presubmits:
           - secret:
               name: cluster-secrets-aws
       - configMap:
-          name: prow-job-cluster-launch-installer-src
+          name: prow-job-cluster-launch-installer-custom-test-image
         name: job-definition
       - name: sentry-dsn
         secret:
@@ -115,9 +115,9 @@ presubmits:
         - name: JOB_NAME_SAFE
           value: e2e-azure-operator
         - name: TEST_COMMAND
-          value: |
-            cd test/openshift
-            make test-e2e
+          value: make test-e2e
+        - name: TEST_IMAGESTREAM_TAG
+          value: stable:cluster-api-actuator-pkg
         image: ci-operator:latest
         imagePullPolicy: Always
         name: ""
@@ -129,7 +129,7 @@ presubmits:
           name: cluster-profile
         - mountPath: /usr/local/e2e-azure-operator
           name: job-definition
-          subPath: cluster-launch-installer-src.yaml
+          subPath: cluster-launch-installer-custom-test-image.yaml
         - mountPath: /etc/sentry-dsn
           name: sentry-dsn
           readOnly: true
@@ -141,7 +141,7 @@ presubmits:
           - secret:
               name: cluster-secrets-azure4
       - configMap:
-          name: prow-job-cluster-launch-installer-src
+          name: prow-job-cluster-launch-installer-custom-test-image
         name: job-definition
       - name: sentry-dsn
         secret:
@@ -189,9 +189,9 @@ presubmits:
         - name: JOB_NAME_SAFE
           value: e2e-gcp-operator
         - name: TEST_COMMAND
-          value: |
-            cd test/openshift
-            make test-e2e
+          value: make test-e2e
+        - name: TEST_IMAGESTREAM_TAG
+          value: stable:cluster-api-actuator-pkg
         image: ci-operator:latest
         imagePullPolicy: Always
         name: ""
@@ -203,7 +203,7 @@ presubmits:
           name: cluster-profile
         - mountPath: /usr/local/e2e-gcp-operator
           name: job-definition
-          subPath: cluster-launch-installer-src.yaml
+          subPath: cluster-launch-installer-custom-test-image.yaml
         - mountPath: /etc/sentry-dsn
           name: sentry-dsn
           readOnly: true
@@ -217,7 +217,7 @@ presubmits:
           - configMap:
               name: cluster-profile-gcp
       - configMap:
-          name: prow-job-cluster-launch-installer-src
+          name: prow-job-cluster-launch-installer-custom-test-image
         name: job-definition
       - name: sentry-dsn
         secret:
