--- a/ci-operator/config/openshift/kubernetes/openshift-kubernetes-origin-4.4-kubernetes-1.17.0-rc.2.yaml
+++ b/ci-operator/config/openshift/kubernetes/openshift-kubernetes-origin-4.4-kubernetes-1.17.0-rc.2.yaml
@@ -21,6 +21,7 @@ tests:
     as: unit
     commands: |
       mkdir -p /tmp/artifacts
+      go install k8s.io/kubernetes/vendor/gotest.tools/gotestsum
       make test KUBE_JUNIT_REPORT_DIR=/tmp/artifacts/
     container:
       from: bin
