mirroring: skip empty files
Mirroring mapping files might be empty (reserved for future use). Skip 
those so that it would not be mistakenly counted as a failure

--- a/ci-operator/jobs/infra-image-mirroring.yaml
+++ b/ci-operator/jobs/infra-image-mirroring.yaml
@@ -67,6 +67,7 @@ periodics:
               failures=0
               for mapping in /etc/imagemirror/mapping_origin*; do
                 echo "Running: oc image mirror -f=$mapping --skip-multiple-scopes"
+                if [ -s "${mapping}" ]; then continue; fi
                 if ! oc image mirror -a /tmp/config.json -f="$mapping" --skip-multiple-scopes; then
                   echo "ERROR: Failed to mirror images from $mapping"
                   failures=$((failures+1))
