--- a/ci-operator/jobs/openshift-knative/serverless-operator/openshift-knative-serverless-operator-release-1.3-presubmits.yaml
+++ b/ci-operator/jobs/openshift-knative/serverless-operator/openshift-knative-serverless-operator-release-1.3-presubmits.yaml
@@ -4,6 +4,128 @@ presubmits:
     always_run: true
     branches:
     - release-1.3
+    context: ci/prow/4.1-images
+    decorate: true
+    decoration_config:
+      skip_cloning: true
+    labels:
+      ci-operator.openshift.io/prowgen-controlled: "true"
+      ci-operator.openshift.io/variant: "4.1"
+      pj-rehearse.openshift.io/can-be-rehearsed: "true"
+    name: pull-ci-openshift-knative-serverless-operator-release-1.3-4.1-images
+    rerun_command: /test 4.1-images
+    spec:
+      containers:
+      - args:
+        - --artifact-dir=$(ARTIFACTS)
+        - --branch=release-1.3
+        - --give-pr-author-access-to-namespace=true
+        - --org=openshift-knative
+        - --repo=serverless-operator
+        - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
+        - --sentry-dsn-path=/etc/sentry-dsn/ci-operator
+        - --target=[images]
+        - --variant=4.1
+        command:
+        - ci-operator
+        env:
+        - name: CONFIG_SPEC
+          valueFrom:
+            configMapKeyRef:
+              key: openshift-knative-serverless-operator-release-1.3__4.1.yaml
+              name: ci-operator-misc-configs
+        image: ci-operator:latest
+        imagePullPolicy: Always
+        name: ""
+        resources:
+          requests:
+            cpu: 10m
+        volumeMounts:
+        - mountPath: /etc/sentry-dsn
+          name: sentry-dsn
+          readOnly: true
+      serviceAccountName: ci-operator
+      volumes:
+      - name: sentry-dsn
+        secret:
+          secretName: sentry-dsn
+    trigger: (?m)^/test( | .* )4.1-images,?($|\s.*)
+  - agent: kubernetes
+    always_run: true
+    branches:
+    - release-1.3
+    context: ci/prow/4.1-upgrade-tests-aws-ocp-41
+    decorate: true
+    decoration_config:
+      skip_cloning: true
+    labels:
+      ci-operator.openshift.io/prowgen-controlled: "true"
+      ci-operator.openshift.io/variant: "4.1"
+      pj-rehearse.openshift.io/can-be-rehearsed: "true"
+    name: pull-ci-openshift-knative-serverless-operator-release-1.3-4.1-upgrade-tests-aws-ocp-41
+    rerun_command: /test 4.1-upgrade-tests-aws-ocp-41
+    spec:
+      containers:
+      - args:
+        - --artifact-dir=$(ARTIFACTS)
+        - --branch=release-1.3
+        - --give-pr-author-access-to-namespace=true
+        - --lease-server=http://boskos
+        - --org=openshift-knative
+        - --repo=serverless-operator
+        - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
+        - --secret-dir=/usr/local/upgrade-tests-aws-ocp-41-cluster-profile
+        - --sentry-dsn-path=/etc/sentry-dsn/ci-operator
+        - --target=upgrade-tests-aws-ocp-41
+        - --template=/usr/local/upgrade-tests-aws-ocp-41
+        - --variant=4.1
+        command:
+        - ci-operator
+        env:
+        - name: CLUSTER_TYPE
+          value: aws
+        - name: CONFIG_SPEC
+          valueFrom:
+            configMapKeyRef:
+              key: openshift-knative-serverless-operator-release-1.3__4.1.yaml
+              name: ci-operator-misc-configs
+        - name: JOB_NAME_SAFE
+          value: upgrade-tests-aws-ocp-41
+        - name: TEST_COMMAND
+          value: make test-upgrade
+        image: ci-operator:latest
+        imagePullPolicy: Always
+        name: ""
+        resources:
+          requests:
+            cpu: 10m
+        volumeMounts:
+        - mountPath: /usr/local/upgrade-tests-aws-ocp-41-cluster-profile
+          name: cluster-profile
+        - mountPath: /usr/local/upgrade-tests-aws-ocp-41
+          name: job-definition
+          subPath: cluster-launch-installer-src.yaml
+        - mountPath: /etc/sentry-dsn
+          name: sentry-dsn
+          readOnly: true
+      serviceAccountName: ci-operator
+      volumes:
+      - name: cluster-profile
+        projected:
+          sources:
+          - secret:
+              name: cluster-secrets-aws
+      - configMap:
+          name: prow-job-cluster-launch-installer-src
+        name: job-definition
+      - name: sentry-dsn
+        secret:
+          secretName: sentry-dsn
+    trigger: (?m)^/test( | .* )4.1-upgrade-tests-aws-ocp-41,?($|\s.*)
+  - agent: kubernetes
+    always_run: true
+    branches:
+    - release-1.3
     context: ci/prow/4.2-e2e-aws-ocp-42
     decorate: true
     decoration_config:
