--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -112,7 +112,19 @@ bugzilla:
       - status: ON_DEV
       - status: POST
     master:
+      add_external_link: true
+      exclude_defaults: true
+      is_open: true
+      state_after_merge:
+        status: MODIFIED
+      state_after_validation:
+        status: POST
       target_release: 4.4.0
+      valid_states:
+      - status: NEW
+      - status: ASSIGNED
+      - status: ON_DEV
+      - status: POST
     openshift-4.1:
       dependent_bug_target_release: 4.2.z
       target_release: 4.1.z
