step-registry: s/mem/memory/

--- a/ci-operator/step-registry/ipi/deprovision/artifacts/bootstrap/ipi-deprovision-artifacts-bootstrap-ref.yaml
+++ b/ci-operator/step-registry/ipi/deprovision/artifacts/bootstrap/ipi-deprovision-artifacts-bootstrap-ref.yaml
@@ -5,6 +5,6 @@ ref:
   resources:
     requests:
       cpu: 300m
-      mem: 300Mi
+      memory: 300Mi
   documentation: |-
     The pre-deprivison bootstrap artifacts step collects artifacts from the installer.
