--- a/ci-operator/step-registry/ipi/deprovision/deprovision/ipi-deprovision-deprovision-ref.yaml
+++ b/ci-operator/step-registry/ipi/deprovision/deprovision/ipi-deprovision-deprovision-ref.yaml
@@ -5,6 +5,6 @@ ref:
   resources:
     requests:
       cpu: 1000m
-      mem: 300Mi
+      memory: 300Mi
   documentation: |-
     The IPI deprivison step tears down the cluster.
