--- a/ci-operator/step-registry/ipi/install/install/ipi-install-install-ref.yaml
+++ b/ci-operator/step-registry/ipi/install/install/ipi-install-install-ref.yaml
@@ -5,6 +5,6 @@ ref:
   resources:
     requests:
       cpu: 1000m
-      mem: 2Gi
+      memory: 2Gi
   documentation: |-
     The IPI install step runs the OpenShift Installer in order to bring up an OpenShift cluster, using the provided cluster profile to choose a target IaaS platform.
