--- a/ci-operator/step-registry/ipi/install/rbac/ipi-install-rbac-ref.yaml
+++ b/ci-operator/step-registry/ipi/install/rbac/ipi-install-rbac-ref.yaml
@@ -5,6 +5,6 @@ ref:
   resources:
     requests:
       cpu: 100m
-      mem: 100Mi
+      memory: 100Mi
   documentation: |-
     The pre-installation RBAC step adds necessary privileges for the cluster under test against the build farm.
