--- a/ci-operator/step-registry/ipi/deprovision/artifacts/must-gather/ipi-deprovision-artifacts-must-gather-ref.yaml
+++ b/ci-operator/step-registry/ipi/deprovision/artifacts/must-gather/ipi-deprovision-artifacts-must-gather-ref.yaml
@@ -5,6 +5,6 @@ ref:
   resources:
     requests:
       cpu: 300m
-      mem: 300Mi
+      memory: 300Mi
   documentation: |-
     The pre-deprivison must-gather step runs the must-gather tool to gather artifacts.
